better documentation of the API for plotting.

--- a/notebooks/02_plotting.ipynb
+++ b/notebooks/02_plotting.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib\n",
-    "from p4tools import io, markings"
+    "from p4tools import io, markings\n",
+    "from numpy.typing import ArrayLike"
    ]
   },
   {
@@ -346,30 +347,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
+    "\n",
     "\n",
     "def compute_direction_histogram(df, segmentsize, density=True, degrees=False):\n",
-    "    \n",
+    "    \"\"\"\n",
+    "    Compute a histogram of direction angles adjusted by north azimuth.\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    df : pandas.DataFrame\n",
+    "        DataFrame containing 'angle' and 'north_azimuth' columns.\n",
+    "    segmentsize : int or float\n",
+    "        Size of the segments (bins) for the histogram in degrees.\n",
+    "    density : bool, optional\n",
+    "        If True, the result is the value of the probability density function at the bin,\n",
+    "        normalized such that the integral over the range is 1. Default is True.\n",
+    "    degrees : bool, optional\n",
+    "        If True, the bin edges are returned in degrees. If False, they are returned in radians. Default is False.\n",
+    "    Returns\n",
+    "    -------\n",
+    "    theta : numpy.ndarray\n",
+    "        The bin edges in radians or degrees, depending on the `degrees` parameter.\n",
+    "    radii : numpy.ndarray\n",
+    "        The counts or density values for each bin.\n",
+    "    Notes\n",
+    "    -----\n",
+    "    If the input DataFrame is empty, the function returns arrays with zero values.\n",
+    "    \"\"\"\n",
+    "\n",
     "    direction = df[\"angle\"]\n",
     "    north_azimuth = df[\"north_azimuth\"]\n",
-    "    direction = (direction - north_azimuth)%360\n",
-    "    bins = np.arange(0,360+segmentsize,segmentsize)\n",
+    "    direction = (direction - north_azimuth) % 360\n",
+    "    bins = np.arange(0, 360 + segmentsize, segmentsize)\n",
     "    if df.shape[0] != 0:\n",
-    "        counts,edges = np.histogram(direction,bins,density=density)\n",
+    "        counts, edges = np.histogram(direction, bins, density=density)\n",
     "    else:\n",
-    "        #Maybe issue a warning\n",
-    "        return [0,0],[0,0]\n",
+    "        # Maybe issue a warning\n",
+    "        return [0, 0], [0, 0]\n",
     "\n",
     "    if not degrees:\n",
     "        theta = np.deg2rad(bins)\n",
-    "    else: \n",
+    "    else:\n",
     "        theta = bins\n",
-    "        \n",
+    "\n",
     "    radii = counts\n",
-    "    return theta,radii\n",
+    "    return theta, radii\n",
     "\n",
     "\n",
-    "def initialize_polar_axes(ax : matplotlib.projections.polar.PolarAxes):\n",
+    "def initialize_polar_axes(ax: matplotlib.projections.polar.PolarAxes):\n",
     "    \"\"\"Initializes the Polar Axes to Wind Directions, counted in clockwise direction from N\n",
     "\n",
     "    Parameters\n",
@@ -379,43 +404,76 @@
     "    \"\"\"\n",
     "    ax.set_theta_zero_location(\"N\")\n",
     "    ax.set_theta_direction(\"clockwise\")\n",
-    "    ax.set_xticks(np.linspace(0,2*np.pi,8,endpoint=False))\n",
-    "    ax.set_xticklabels([\"N\",\"NE\",\"E\",\"SE\",\"S\",\"SW\",\"W\",\"NW\"])\n",
+    "    ax.set_xticks(np.linspace(0, 2 * np.pi, 8, endpoint=False))\n",
+    "    ax.set_xticklabels([\"N\", \"NE\", \"E\", \"SE\", \"S\", \"SW\", \"W\", \"NW\"])\n",
     "    ax.set_yticklabels([])\n",
     "\n",
     "\n",
-    "\n",
-    "def get_colorscale(nr):\n",
-    "    \n",
-    "    color_scale = np.linspace(0,1,nr)\n",
+    "def get_colorscale(nr: int):\n",
+    "    \"\"\"\n",
+    "    Generate a color scale with a specified number of colors.\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    nr : int\n",
+    "        The number of colors to generate in the color scale.\n",
+    "    Returns\n",
+    "    -------\n",
+    "    numpy.ndarray\n",
+    "        An array of colors corresponding to the specified number of colors.\n",
+    "    Notes\n",
+    "    -----\n",
+    "    - If `nr` is less than 9, the \"Pastel1\" colormap is used.\n",
+    "    - If `nr` is less than 20 but greater than or equal to 9, the \"tab20\" colormap is used.\n",
+    "    - If `nr` is 20 or greater, the \"turbo\" colormap is used.\n",
+    "    \"\"\"\n",
+    "    color_scale = np.linspace(0, 1, nr)\n",
     "    if nr < 9:\n",
     "        cmap = colormaps[\"Pastel1\"]\n",
-    "    if nr < 20:   \n",
+    "    if nr < 20:\n",
     "        cmap = colormaps[\"tab20\"]\n",
     "    else:\n",
     "        cmap = colormaps[\"turbo\"]\n",
     "    return cmap(color_scale)\n",
     "\n",
-    "def _get_filtered_index(df,ls_bin, per_obsid=False):\n",
+    "\n",
+    "def _get_filtered_index(df, ls_bin, per_obsid=False):\n",
+    "    \"\"\"\n",
+    "    Filter the DataFrame based on either unique observation IDs or specified bins.\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    df : pandas.DataFrame\n",
+    "        The input DataFrame containing the data to be filtered. It must have columns 'obsid' and 'l_s'.\n",
+    "    ls_bin : list or array-like\n",
+    "        The bin edges for the 'l_s' column if `per_obsid` is False.\n",
+    "    per_obsid : bool, optional\n",
+    "        If True, the DataFrame will be filtered by unique observation IDs. \n",
+    "        If False, the DataFrame will be filtered by the specified bins in `ls_bin`.\n",
+    "    Returns\n",
+    "    -------\n",
+    "    indexes : list of pandas.Series\n",
+    "        A list of boolean Series, each representing the filtered index for the DataFrame.\n",
+    "    label_list : list of str\n",
+    "        A list of labels corresponding to each filtered index. \n",
+    "        If `per_obsid` is True, the labels are the unique observation IDs. \n",
+    "        If False, the labels include the bin range, number of fans, and number of unique observation IDs.\n",
+    "    \"\"\"\n",
     "\n",
     "    indexes = []\n",
     "    label_list = []\n",
     "    if per_obsid:\n",
     "        obsids = df.obsid.unique()\n",
-    "        for id in obsids:    \n",
+    "        for id in obsids:\n",
     "            ind = df.obsid == id\n",
     "            indexes.append(ind)\n",
     "            label_list.append(id)\n",
-    "        \n",
+    "\n",
     "        return indexes, label_list\n",
-    "    \n",
     "\n",
     "    else:\n",
-    "        _,ls_bin = pd.cut(df.l_s, bins=ls_bin,retbins=True)\n",
+    "        _, ls_bin = pd.cut(df.l_s, bins=ls_bin, retbins=True)\n",
     "\n",
-    "        for i,ls in enumerate(ls_bin[:-1]):\n",
-    "\n",
-    "            ind = df.l_s.between(left=ls_bin[i],right=ls_bin[i+1])\n",
+    "        for i, ls in enumerate(ls_bin[:-1]):\n",
+    "            ind = df.l_s.between(left=ls_bin[i], right=ls_bin[i + 1])\n",
     "            df_sub = df[ind]\n",
     "            label1 = f\"[{ls_bin[i]:.0f}, {ls_bin[i+1]:.0f}]\"\n",
     "            label2 = f\"#Fans = {df_sub.shape[0]}\"\n",
@@ -428,59 +486,148 @@
     "        return indexes, label_list\n",
     "\n",
     "\n",
-    "def _draw_histogram(ax, df, ls_bin = 4, per_obsid=False, density = True, segmentsize=3.6, alpha=0.5, degrees=False, cutoff = None):\n",
+    "def _draw_histogram(\n",
+    "    ax,\n",
+    "    df,\n",
+    "    ls_bin=4,\n",
+    "    per_obsid=False,\n",
+    "    density=True,\n",
+    "    segmentsize=3.6,\n",
+    "    alpha=0.5,\n",
+    "    degrees=False,\n",
+    "    cutoff=None,\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    Draws a histogram on the given axes based on the provided DataFrame.\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    ax : matplotlib.axes.Axes\n",
+    "        The axes on which to draw the histogram.\n",
+    "    df : pandas.DataFrame\n",
+    "        The DataFrame containing the data to be plotted.\n",
+    "    ls_bin : int, optional\n",
+    "        Bin size for filtering the data (default is 4).\n",
+    "    per_obsid : bool, optional\n",
+    "        Whether to filter data per observation ID (default is False).\n",
+    "    density : bool, optional\n",
+    "        Whether to normalize the histogram (default is True).\n",
+    "    segmentsize : float, optional\n",
+    "        Size of the segments for the histogram (default is 3.6).\n",
+    "    alpha : float, optional\n",
+    "        Transparency level of the bars (default is 0.5).\n",
+    "    degrees : bool, optional\n",
+    "        Whether the angles are in degrees (default is False).\n",
+    "    cutoff : int, optional\n",
+    "        Minimum number of data points required to plot a histogram (default is None).\n",
+    "    Returns\n",
+    "    -------\n",
+    "    ax : matplotlib.axes.Axes\n",
+    "        The axes with the histogram drawn on it.\n",
+    "    \"\"\"\n",
     "\n",
-    "    indexes,label_list = _get_filtered_index(df,ls_bin,per_obsid)\n",
+    "    indexes, label_list = _get_filtered_index(df, ls_bin, per_obsid)\n",
     "\n",
     "    cmap = get_colorscale(len(indexes))\n",
     "\n",
-    "\n",
-    "    for i in range(0,len(indexes)):\n",
+    "    for i in range(0, len(indexes)):\n",
     "        df_sub = df[indexes[i]]\n",
     "\n",
     "        if (cutoff is not None) and (df_sub.shape[0] < cutoff):\n",
-    "            ax.bar([0,0],[0,0], width=3.6, color=\"k\",label=label_list[i], alpha=0.0)\n",
+    "            ax.bar([0, 0], [0, 0], width=3.6, color=\"k\", label=label_list[i], alpha=0.0)\n",
     "            continue\n",
-    "        \n",
+    "\n",
     "        label = label_list[i]\n",
-    "        theta, radii = compute_direction_histogram(df_sub, segmentsize, density=density, degrees=degrees)\n",
+    "        theta, radii = compute_direction_histogram(\n",
+    "            df_sub, segmentsize, density=density, degrees=degrees\n",
+    "        )\n",
     "        width = np.diff(theta)\n",
-    "        ax.bar(theta[:-1],radii, width=width, color=cmap[i],label=label, alpha=alpha)\n",
+    "        ax.bar(theta[:-1], radii, width=width, color=cmap[i], label=label, alpha=alpha)\n",
     "\n",
     "    return ax\n",
     "\n",
-    "def histogram_polar(df,ls_bin = 4, per_obsid = False , segmentsize=3.6, alpha=0.5, cutoff = None,):\n",
+    "\n",
+    "def histogram_polar(\n",
+    "    df,\n",
+    "    ls_bin: int | ArrayLike = 4,\n",
+    "    per_obsid=False,\n",
+    "    segmentsize=3.6,\n",
+    "    alpha=0.5,\n",
+    "    cutoff=None,\n",
+    "):\n",
     "    \"\"\"\n",
-    "    Plots a histogram in polar coordinates.\n",
-    "    Parameters:\n",
-    "    df : pandas.DataFrame\n",
-    "        The data frame containing the data to be plotted.\n",
-    "    ls_bin : int, optional\n",
-    "        The bin size for the histogram (default is 4).\n",
+    "    Plots a histogram in polar coordinates. These are the inverse windrose plots.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    df : DataFrame\n",
+    "        The input data frame containing the data to be plotted.\n",
+    "    ls_bin : int or ArrayLike, optional\n",
+    "        The number of bins or an array-like object defining the bin edges. Default is 4.\n",
     "    per_obsid : bool, optional\n",
-    "        If True, the histogram is plotted per observation ID (default is False).\n",
+    "        If True, the histogram is plotted per observation ID. Default is False.\n",
     "    segmentsize : float, optional\n",
-    "        The size of each segment in the histogram (default is 3.6).\n",
+    "        The size of each segment in degrees. Default is 3.6.\n",
     "    alpha : float, optional\n",
-    "        The transparency level of the histogram bars (default is 0.5).\n",
+    "        The transparency level of the histogram bars. Default is 0.5.\n",
     "    cutoff : float, optional\n",
-    "        A cutoff value for the data (default is None).\n",
-    "    Returns:\n",
-    "    matplotlib.axes._subplots.PolarAxesSubplot\n",
-    "        The polar axes with the histogram plotted.\n",
+    "        A cutoff value to filter the data. Default is None.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    ax : matplotlib.axes._subplots.PolarAxesSubplot\n",
+    "        The polar axes with the plotted histogram.\n",
     "    \"\"\"\n",
     "\n",
-    "    ax = plt.subplot(projection = \"polar\")\n",
-    "    ax = _draw_histogram(ax, df, ls_bin=ls_bin, per_obsid=per_obsid, segmentsize=segmentsize, alpha=alpha, cutoff= cutoff)\n",
+    "    ax = plt.subplot(projection=\"polar\")\n",
+    "    ax = _draw_histogram(\n",
+    "        ax,\n",
+    "        df,\n",
+    "        ls_bin=ls_bin,\n",
+    "        per_obsid=per_obsid,\n",
+    "        segmentsize=segmentsize,\n",
+    "        alpha=alpha,\n",
+    "        cutoff=cutoff,\n",
+    "    )\n",
     "    initialize_polar_axes(ax)\n",
     "    ax.legend(bbox_to_anchor=(1.05, 1), loc=\"upper left\")\n",
     "\n",
     "    return ax\n",
     "\n",
-    "def histogram_cartesian(df, ls_bin = 4, segmentsize=3.6, alpha=0.5, degrees=True):\n",
+    "\n",
+    "def histogram_cartesian(df, ls_bin=4, segmentsize=3.6, alpha=0.5, degrees=True):\n",
+    "    \"\"\"\n",
+    "    Plots a histogram of the wind directions on Cartesian coordinates.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    df : DataFrame\n",
+    "        The data to be plotted.\n",
+    "    ls_bin : int or ArrayLike, optional\n",
+    "        The number of bins or an array-like object defining the bin edges. (default is 4).\n",
+    "    segmentsize : float, optional\n",
+    "        The size of the segments in the histogram (default is 3.6).\n",
+    "    alpha : float, optional\n",
+    "        The transparency level of the histogram bars (default is 0.5).\n",
+    "    degrees : bool, optional\n",
+    "        Whether to use degrees for the histogram (default is True).\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    ax : matplotlib.axes._subplots.AxesSubplot\n",
+    "        The axes object with the plotted histogram.\n",
+    "    \"\"\"\n",
+    "\n",
     "    ax = plt.subplot()\n",
-    "    ax = _draw_histogram(ax, df, ls_bin=ls_bin, density=False ,segmentsize=segmentsize, alpha=alpha, degrees=degrees)\n",
-    "    return ax"
+    "    ax = _draw_histogram(\n",
+    "        ax,\n",
+    "        df,\n",
+    "        ls_bin=ls_bin,\n",
+    "        density=False,\n",
+    "        segmentsize=segmentsize,\n",
+    "        alpha=alpha,\n",
+    "        degrees=degrees,\n",
+    "    )\n",
+    "    return ax\n"
    ]
   },
   {
@@ -746,7 +893,7 @@
    "split_at_heading": true
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "planetary",
    "language": "python",
    "name": "python3"
   },
