added docstrings in production.catalgog

--- a/notebooks/05_production.catalog.ipynb
+++ b/notebooks/05_production.catalog.ipynb
@@ -509,12 +509,25 @@
     "\n",
     "    @property\n",
     "    def blotch_merged(self):\n",
+    "        \"\"\"\n",
+    "        Return the filepath for the blotch.csv which has the Metadata Merged.\n",
+    "        \"\"\"\n",
     "        return self.blotch_file.parent / f\"{self.blotch_file.stem}_meta_merged.csv\"\n",
     "\n",
     "    def read_fan_file(self):\n",
+    "        \"\"\"\n",
+    "        Reads the fan CSV with merged metadata file and returns it as a pandas DataFrame.\n",
+    "        Returns:\n",
+    "            pd.DataFrame: The contents of the fan merged CSV file.\n",
+    "        \"\"\"\n",
     "        return pd.read_csv(self.fan_merged)\n",
     "\n",
     "    def read_blotch_file(self):\n",
+    "        \"\"\"\n",
+    "        Reads the blotch CSV with merged metadata file and returns it as a pandas DataFrame.\n",
+    "        Returns:\n",
+    "            pd.DataFrame: The contents of the fan merged CSV file.\n",
+    "        \"\"\"\n",
     "        return pd.read_csv(self.blotch_merged)\n",
     "\n",
     "    def mark_done(self,obsid):\n",
@@ -532,6 +545,24 @@
     "    \n",
     "\n",
     "    def check_for_todo(self, overwrite=None):\n",
+    "        \"\"\"\n",
+    "        Check for TODO items based on the existence of \"Done.txt\" files.\n",
+    "\n",
+    "        This method checks each observation ID (obsid) in the `self.obsids` list to determine if a \"Done.txt\" file exists\n",
+    "        in the corresponding results save folder. If the file exists and `overwrite` is set to False, the obsid is skipped.\n",
+    "        Otherwise, the obsid is added to the `self.todo` list.\n",
+    "\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        overwrite : bool, optional\n",
+    "            If provided, this value will override the instance's `overwrite` attribute. Defaults to None.\n",
+    "\n",
+    "        Attributes\n",
+    "        ----------\n",
+    "        self.todo : list\n",
+    "            A list of obsids that need to be processed.\n",
+    "        \"\"\"\n",
+    "\n",
     "        if overwrite is None:\n",
     "            overwrite = self.overwrite\n",
     "        bucket = []\n",
@@ -548,11 +579,23 @@
     "        return [(i, self.catalog, self.dbname) for i in self.todo]\n",
     "\n",
     "    def get_no_of_tiles_per_obsid(self):\n",
+    "        \"\"\"\n",
+    "        Calculate the number of unique tiles per observation ID.\n",
+    "        Returns:\n",
+    "            pandas.Series: A series with the \"image_name\" as the index and the count of\n",
+    "                   unique \"image_id\" values as the values.\n",
+    "        \"\"\"\n",
+    "        #This method reads data from a parquet file specified by the `dbname` attribute,\n",
+    "        #groups the data by the \"image_name\" column, and then counts the number of unique\n",
+    "        #\"image_id\" values for each group.\n",
     "        all_data = pd.read_parquet(self.dbname)\n",
     "        return all_data.groupby(\"image_name\").image_id.nunique()\n",
     "\n",
     "    @property\n",
     "    def EDRINDEX_meta_path(self):\n",
+    "        \"\"\"\n",
+    "        Returns the EDRINDEX_metdata.csv\n",
+    "        \"\"\"\n",
     "        return self.savefolder / f\"{self.catalog}_EDRINDEX_metadata.csv\"\n",
     "\n",
     "    def calc_metadata(self):\n",
@@ -648,6 +691,31 @@
     "        return out\n",
     "\n",
     "    def merge_all(self):\n",
+    "        \"\"\"\n",
+    "        Merges multiple data sources into a consolidated format for fans and blotches.\n",
+    "        Logging:\n",
+    "        - Logs the paths of the written fans and blotches CSV files.\n",
+    "        \"\"\"\n",
+    "\n",
+    "        #This function performs the following steps:\n",
+    "        #1. Reads in data files for fans, blotches, metadata, and tile coordinates.\n",
+    "        #2. Averages multiple fnotch results for fans and blotches.\n",
+    "        #3. Merges metadata into the fans and blotches dataframes.\n",
+    "        #4. Drops unnecessary columns from tile coordinates and saves the cleaned data.\n",
+    "        #5. Merges campt results into the fans and blotches dataframes.\n",
+    "        #6. Writes out the consolidated fans and blotches data to CSV files.\n",
+    "        #The function assumes that the following instance variables are defined:\n",
+    "        #   - self.fan_file: Path to the fans data file.\n",
+    "        #   - self.blotch_file: Path to the blotches data file.\n",
+    "        #   - self.metadata_path: Path to the metadata file.\n",
+    "        #   - self.tile_coords_path: Path to the tile coordinates file.\n",
+    "        #   - self.tile_coords_path_final: Path to save the cleaned tile coordinates file.\n",
+    "        #   - self.fan_merged: Path to save the consolidated fans data.\n",
+    "        #   - self.blotch_merged: Path to save the consolidated blotches data.\n",
+    "        #   - self.DROP_FOR_TILE_COORDS: List of columns to drop from tile coordinates.\n",
+    "        #   - self.FAN_COLUMNS_AS_PUBLISHED: List of columns to include in the final fans CSV.\n",
+    "        #   - self.BLOTCH_COLUMNS_AS_PUBLISHED: List of columns to include in the final blotches CSV.\n",
+    "\n",
     "        # read in data files\n",
     "        fans = pd.read_csv(self.fan_file)\n",
     "        blotches = pd.read_csv(self.blotch_file)\n",
@@ -717,6 +785,31 @@
     "        LOGGER.info(\"Wrote %s\", str(self.blotch_merged))\n",
     "\n",
     "    def calc_marking_coordinates(self):\n",
+    "        \"\"\"\n",
+    "        Calculate marking coordinates by processing fan and blotch data.\n",
+    "        This method reads fan and blotch data from CSV files, combines them, and processes the data to calculate marking coordinates. \n",
+    "        It checks for any missing observation IDs and logs a warning if any are found. For each observation ID with data, \n",
+    "        it processes the data to convert XY coordinates to latitude and longitude.\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        self : object\n",
+    "            The instance of the class containing this method. It should have the following attributes:\n",
+    "            - fan_file : str\n",
+    "                Path to the CSV file containing fan data.\n",
+    "            - blotch_file : str\n",
+    "                Path to the CSV file containing blotch data.\n",
+    "            - obsids : list\n",
+    "                List of observation IDs to be processed.\n",
+    "            - savefolder : str\n",
+    "                Directory where the processed data will be saved.\n",
+    "            - overwrite : bool\n",
+    "                Flag indicating whether to overwrite existing files.\n",
+    "        Raises\n",
+    "        ------\n",
+    "        Warning\n",
+    "            If any observation IDs have no data from clustering, a warning is logged.\n",
+    "        \"\"\"\n",
+    "        \n",
     "        fans = pd.read_csv(self.fan_file)\n",
     "        blotches = pd.read_csv(self.blotch_file)\n",
     "        combined = pd.concat([fans, blotches], sort=False)\n",
@@ -797,6 +890,20 @@
     "\n",
     "\n",
     "    def launch_catalog_production(self,kind : str = \"serial\", parallel_tasks : int = 10):\n",
+    "        \"\"\"\n",
+    "        Launch the catalog production process.\n",
+    "\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        kind : str, optional\n",
+    "            The type of production to launch. Can be \"serial\" or \"parallel\". Defaults to \"serial\".\n",
+    "        parallel_tasks : int, optional\n",
+    "            The number of parallel tasks to run if kind is \"parallel\". Defaults to 10.\n",
+    "\n",
+    "        Returns\n",
+    "        -------\n",
+    "        None\n",
+    "        \"\"\"\n",
     "\n",
     "        if kind == \"serial\":\n",
     "            self.launch_serial_production()\n",
