added show_stamps docstring

--- a/notebooks/02_plotting.ipynb
+++ b/notebooks/02_plotting.ipynb
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -763,6 +763,22 @@
     "from typing import Optional,Union\n",
     "\n",
     "def show_stamps(df_stamps : gpd.GeoDataFrame , mark_stamp : Optional[Union[str,list[str]]] = None, ax=None):\n",
+    "    \"\"\"\n",
+    "    Plot the geospatial stamps of the HiRISE images on a map.\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    df_stamps : gpd.GeoDataFrame\n",
+    "        A GeoDataFrame containing the geospatial HiRISE stamps to be plotted.\n",
+    "    mark_stamp : str or list of str, optional\n",
+    "        The ID(s) of the stamp(s) to be highlighted in red. If None, no stamps are highlighted.\n",
+    "    ax : matplotlib.axes.Axes, optional\n",
+    "        The axes on which to plot. If None, a new figure and axes are created.\n",
+    "    Returns\n",
+    "    -------\n",
+    "    ax : matplotlib.axes.Axes\n",
+    "        The axes with the plotted stamps.\n",
+    "    \"\"\"\n",
+    "    \n",
     "\n",
     "    if ax is None:\n",
     "        fig,ax = plt.subplots()\n",
