Finished the docstrings that I missed in production.catalog

--- a/notebooks/05_production.catalog.ipynb
+++ b/notebooks/05_production.catalog.ipynb
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,6 +632,19 @@
     "        LOGGER.info(\"Wrote %s\", str(self.metadata_path))\n",
     "\n",
     "    def calc_tile_coordinates(self):\n",
+    "        \"\"\"\n",
+    "        Calculate the tile coordinates for a set of observation IDs and save the results to a CSV file.\n",
+    "        This method processes a list of observation IDs to calculate their corresponding tile coordinates.\n",
+    "        It first checks if the tile coordinates need to be calculated for each observation ID, and if so,\n",
+    "        it performs the calculation. Finally, it concatenates the results and saves them to a CSV file.\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        None\n",
+    "        Returns\n",
+    "        -------\n",
+    "        None\n",
+    "        \"\"\"\n",
+    "\n",
     "        cubepaths = [P4Mosaic(obsid).mosaic_path for obsid in self.obsids]\n",
     "\n",
     "        todo = []\n",
@@ -830,6 +843,20 @@
     "\n",
     "\n",
     "    def collect_marking_coordinates(self,obsids = None):\n",
+    "        \"\"\"\n",
+    "        Collect marking coordinates from observation IDs.\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        obsids : numpy.ndarray or None, optional\n",
+    "            An array of observation IDs to process. If None, the method will use \n",
+    "            `self.obsids`.\n",
+    "        Returns\n",
+    "        -------\n",
+    "        pandas.DataFrame\n",
+    "            A DataFrame containing the collected marking coordinates with columns \n",
+    "            renamed to 'image_x' and 'image_y', and duplicates removed.\n",
+    "        \"\"\"\n",
+    "\n",
     "        bucket = []\n",
     "\n",
     "        if type(obsids) is np.ndarray:\n",
@@ -846,11 +873,39 @@
     "        return ground\n",
     "\n",
     "    def fix_marking_coordinates_precision(self, df):\n",
+    "        \"\"\"\n",
+    "        Adjust the precision of marking coordinates in a DataFrame.\n",
+    "        This method saves the DataFrame to a temporary CSV file with a specified \n",
+    "        floating-point precision and then reads it back as strings.\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        df : pandas.DataFrame\n",
+    "            The DataFrame containing marking coordinates to be adjusted.\n",
+    "        Returns\n",
+    "        -------\n",
+    "        pandas.DataFrame\n",
+    "            A DataFrame with marking coordinates as strings, with the specified precision.\n",
+    "        \"\"\"\n",
+    "        \n",
     "        fname = \"tempfile.csv\"\n",
     "        df.to_csv(fname, float_format=\"%.7f\")\n",
     "        return pd.read_csv(fname, dtype=\"str\")\n",
     "\n",
     "    def merge_campt_results(self, fans, blotches):\n",
+    "        \"\"\"\n",
+    "        Merges the results of the campt output with ground marking coordinates.\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        fans : pandas.DataFrame\n",
+    "            DataFrame containing fan data with columns including 'obsid', 'image_x', and 'image_y'.\n",
+    "        blotches : pandas.DataFrame\n",
+    "            DataFrame containing blotch data with columns including 'obsid', 'image_x', and 'image_y'.\n",
+    "        Returns\n",
+    "        -------\n",
+    "        tuple of pandas.DataFrame\n",
+    "            A tuple containing two DataFrames: the merged fans DataFrame and the merged blotches DataFrame.\n",
+    "        \"\"\"\n",
+    "        \n",
     "        INDEX = [\"obsid\", \"image_x\", \"image_y\"]\n",
     "\n",
     "        ## This part is necessary for the case in which not all obsids have data left after clustering\n",
@@ -867,7 +922,24 @@
     "    \n",
     "    def fix_marking_ids(self):\n",
     "        \"\"\"\n",
-    "        This function is supposed to be called to fix the marking IDs when parallely proccessed\n",
+    "        Fix the marking IDs for the merged fan and blotch dataframes.\n",
+    "        This function reads the merged fan and blotch CSV files, generates unique marking IDs for each row,\n",
+    "        and writes the updated data back to the CSV files. It ensures that each marking ID is unique within\n",
+    "        the respective dataframe.\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        None\n",
+    "        Returns\n",
+    "        -------\n",
+    "        None\n",
+    "        Raises\n",
+    "        ------\n",
+    "        AssertionError\n",
+    "            If the number of unique marking IDs does not match the number of rows in the dataframe.\n",
+    "        Notes\n",
+    "        -----\n",
+    "        This function is intended to be used when the dataframes have been processed in parallel and the\n",
+    "        marking IDs need to be fixed to ensure uniqueness.\n",
     "        \"\"\"\n",
     "\n",
     "        bucket = [(self.fan_merged,fan_id_generator),(self.blotch_merged,blotch_id_generator)]\n",
