added more docstrings for io and markings

--- a/notebooks/05a_production.io.ipynb
+++ b/notebooks/05a_production.io.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -262,6 +262,16 @@
     "\n",
     "    @property\n",
     "    def clustering_logfile(self):\n",
+    "        \"\"\"\n",
+    "        Returns the path to the clustering settings YAML file.\n",
+    "        This method constructs the path to the \"clustering_settings.yaml\" file\n",
+    "        located in the same directory as the fanfile.\n",
+    "        Returns\n",
+    "        -------\n",
+    "        pathlib.Path\n",
+    "            The path to the \"clustering_settings.yaml\" file.\n",
+    "        \"\"\"\n",
+    "\n",
     "        return self.fanfile.parent / \"clustering_settings.yaml\"\n",
     "\n",
     "    @property\n",
@@ -326,6 +336,26 @@
     "        return \"L1C_cut_{:.1f}\".format(self.cut)\n",
     "\n",
     "    def get_path(self, marking, specific=\"\")-> Path:\n",
+    "        \"\"\"\n",
+    "        Generate a file path based on the provided parameters.\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        marking : str\n",
+    "            A string to be included in the file name.\n",
+    "        specific : str, optional\n",
+    "            A specific sub-folder or identifier to be included in the path (default is \"\").\n",
+    "        Returns\n",
+    "        -------\n",
+    "        Path\n",
+    "            The constructed file path as a Path object.\n",
+    "        Notes\n",
+    "        -----\n",
+    "        - If `self.id` is not set, a warning is logged and `self.obsid` is used instead.\n",
+    "        - The `specific` parameter, if provided, is included in both the path and the file name.\n",
+    "        - The file name is constructed as \"{id_}_{specific}_{marking}{self.suffix}\" if `specific` is not empty,\n",
+    "          otherwise it is \"{id_}_{marking}{self.suffix}\".\n",
+    "        \"\"\"\n",
+    "\n",
     "        \n",
     "        p = self.path_so_far\n",
     "        # now add the image_id\n",
@@ -484,6 +514,28 @@
     "        return s\n",
     "\n",
     "    def read(self, **kwargs):\n",
+    "        \"\"\"\n",
+    "        Reads data from a database file based on its extension and returns as a pandas DataFrame.\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        **kwargs : dict\n",
+    "            Additional keyword arguments passed to the pandas read functions.\n",
+    "        Returns\n",
+    "        -------\n",
+    "        pd.DataFrame\n",
+    "            DataFrame containing the data read from the file.\n",
+    "        Notes\n",
+    "        -----\n",
+    "        The method supports reading from files with the following extensions:\n",
+    "        - .hdf: Uses `pd.read_hdf`.\n",
+    "        - .parquet: Uses `pd.read_parquet`. If a `where` condition is provided in `kwargs`, it extracts the observation ID from the condition and reads the corresponding file.\n",
+    "        - .csv: Uses `pd.read_csv`.\n",
+    "        Raises\n",
+    "        ------\n",
+    "        ValueError\n",
+    "            If the file extension is not supported.\n",
+    "        \"\"\"\n",
+    "\n",
     "        p = Path(self.dbname)\n",
     "        if p.suffix.endswith(\"hdf\"):\n",
     "            return pd.read_hdf(p, **kwargs)\n",
