--- a/notebooks/05b_production.markings.ipynb
+++ b/notebooks/05b_production.markings.ipynb
@@ -94,6 +94,11 @@
     "        Default: Latest one.\n",
     "    data : pd.DataFrame, optional\n",
     "        If the data was already extracted before init, it can be provided here.\n",
+    "    image_name : str, optional\n",
+    "        The name of the image associated with the `imgid`.\n",
+    "        Default: None.\n",
+    "    scope : str, optional\n",
+    "        The scope of the image data. Default: 'planet4'.\n",
     "    \"\"\"\n",
     "\n",
     "    def __init__(self, imgid, scope='planet4', dbname=None, data=None, image_name=None):\n",
@@ -117,6 +122,7 @@
     "\n",
     "    @property\n",
     "    def image_name(self):\n",
+    "        \"Return the name of the image i.e. the HiRISE ID\"\n",
     "        if self._image_name is None:\n",
     "            db = io.DBManager(self.dbname)\n",
     "            self._image_name = db.get_obsid_for_tile_id(self.imgid)\n",
@@ -124,14 +130,30 @@
     "\n",
     "    @property\n",
     "    def tile_coords(self):\n",
+    "        \"The Coordinates for the tiles in x and y\"\n",
     "        return self.data[['x_tile', 'y_tile']].drop_duplicates().values[0]\n",
     "\n",
     "    @property\n",
     "    def blotchmask(self):\n",
+    "        \"\"\"\n",
+    "        Check if the marking is 'blotch'.\n",
+    "        Returns\n",
+    "        -------\n",
+    "        pandas.Series\n",
+    "            A boolean series indicating rows where the 'marking' column is 'blotch'.\n",
+    "        \"\"\"\n",
+    "        \n",
     "        return self.data.marking == 'blotch'\n",
     "\n",
     "    @property\n",
     "    def fanmask(self):\n",
+    "        \"\"\"\n",
+    "        Check if the marking is a 'fan'\n",
+    "        Returns\n",
+    "        -------\n",
+    "        pandas.Series\n",
+    "            A boolean series indicating rows where the 'marking' column is 'fan'.\n",
+    "        \"\"\"\n",
     "        return self.data.marking == 'fan'\n",
     "\n",
     "    @property\n",
@@ -172,6 +194,7 @@
     "        return self.filter_data('blotch', user_name, without_users)\n",
     "\n",
     "    def show_subframe(self, ax=None, aspect='auto'):\n",
+    "        \"Plot the image of a tile\"\n",
     "        if ax is None:\n",
     "            fig, ax = plt.subplots(figsize=calc_fig_size(8))\n",
     "        ax.imshow(self.subframe, origin='upper', aspect=aspect)\n",
@@ -179,7 +202,29 @@
     "\n",
     "    def plot_objects(self, objects, n=None, img=True, ax=None,\n",
     "                     user_color=None, user_colors=None, wind_pointer=False):\n",
-    "        \"\"\"Plotting either fans or blotches with p4 subframe background.\"\"\"\n",
+    "        \"\"\"\n",
+    "        Plot either fans or blotches with p4 subframe background.\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        objects : list\n",
+    "            List of objects to plot. Each object should have a `plot` method.\n",
+    "        n : int, optional\n",
+    "            Number of objects to plot. If None, all objects are plotted.\n",
+    "        img : bool, optional\n",
+    "            If True, plot the background image. Default is True.\n",
+    "        ax : matplotlib.axes.Axes, optional\n",
+    "            Matplotlib axis to plot on. If None, a new axis is created.\n",
+    "        user_color : str or tuple, optional\n",
+    "            Color to use for all objects. If None, colors are cycled.\n",
+    "        user_colors : list, optional\n",
+    "            List of colors to cycle through for each object. If None, a default color palette is used.\n",
+    "        wind_pointer : bool, optional\n",
+    "            If True, add a mean wind pointer for objects of type `Fan`. Default is False.\n",
+    "        Returns\n",
+    "        -------\n",
+    "        None\n",
+    "        \"\"\"\n",
+    "\n",
     "        LOGGER.debug(\"Entering markings.plot_objects\")\n",
     "        LOGGER.debug(\"Received %i objects to plot.\", len(objects))\n",
     "        if ax is None:\n",
@@ -237,12 +282,25 @@
     "        self.plot_objects(data, **kwargs)\n",
     "\n",
     "    def plot_blotches(self, data=None, **kwargs):\n",
+    "        \"Plot blotches within the TileID\"\n",
     "        self.plot_markings('blotch', data=data, **kwargs)\n",
     "\n",
     "    def plot_fans(self, data=None, **kwargs):\n",
+    "        \"Plot fans within the TileID\"\n",
     "        self.plot_markings('fan', data=data, **kwargs)\n",
     "\n",
     "    def plot_all(self, savedir=None):\n",
+    "        \"\"\"\n",
+    "        Plots various subframes and markings on a 2x2 grid of subplots.\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        savedir : str or pathlib.Path, optional\n",
+    "            Directory where the plot image will be saved. If None, the plot is not saved.\n",
+    "        Returns\n",
+    "        -------\n",
+    "        None\n",
+    "        \"\"\"\n",
+    "        \n",
     "        fig, axes = plt.subplots(2, 2)\n",
     "        axes = axes.ravel()\n",
     "        for i in [0, 2]:\n",
@@ -278,23 +336,15 @@
     "\n",
     "    Parameters\n",
     "    ----------\n",
-    "    value : float\n",
-    "        Fnotch value (= 1 - blotchiness), as calculated in clustering.ClusterManager()\n",
-    "    fandata : pandas.Series\n",
+    "    fan : pandas.Series\n",
     "        data set containing all required for Fan object (see `Fan`)\n",
-    "    blotchdata : pandas.Series\n",
+    "    blotch : pandas.Series\n",
     "        data set containing all required for Blotch object (see `Blotch`)\n",
+    "    scope : str, optional\n",
+    "        the scope in which the coordinates are calculated (default is 'planet4')\n",
+    "\n",
+    "\n",
     "    \"\"\"\n",
-    "\n",
-    "    @classmethod\n",
-    "    def from_series(cls, series, scope):\n",
-    "        \"Create Fnotch instance from series with fan_ and blotch_ indices.\"\n",
-    "        fan = Fan(series.filter(regex='fan_').rename(lambda x: x[4:]),\n",
-    "                  scope=scope)\n",
-    "        blotch = Blotch(series.filter(regex='blotch_').rename(lambda x: x[7:]),\n",
-    "                        scope=scope)\n",
-    "        return cls(series.fnotch_value, fan, blotch, scope)\n",
-    "\n",
     "    def __init__(self, fan, blotch, scope='planet4'):\n",
     "        self.fan = fan\n",
     "        self.blotch = blotch\n",
@@ -306,6 +356,16 @@
     "                                       blotch.iloc[0]['n_votes'])\n",
     "        self.data.loc['fan', 'vote_ratio'] = (1 - blotchiness) + 0.01\n",
     "        self.data.loc['blotch', 'vote_ratio'] = blotchiness - 0.01\n",
+    "\n",
+    "    @classmethod\n",
+    "    def from_series(cls, series, scope):\n",
+    "        \"Create Fnotch instance from series with fan_ and blotch_ indices.\"\n",
+    "        fan = Fan(series.filter(regex='fan_').rename(lambda x: x[4:]),\n",
+    "                  scope=scope)\n",
+    "        blotch = Blotch(series.filter(regex='blotch_').rename(lambda x: x[7:]),\n",
+    "                        scope=scope)\n",
+    "        return cls(series.fnotch_value, fan, blotch, scope)\n",
+    "\n",
     "\n",
     "    def apply_cut(self, cut):\n",
     "        \"\"\"Return the right marking, depending on cut value.\n",
